# auto-pay-polit

./: .gitignore  README.md  feature-main.md
auto-pay-backend/: pom.xml
auto-pay-backend/src/main/resources/: application.yml
auto-pay-frontend/: package-lock.json  package.json  vite.config.ts
auto-pay-frontend/src/api/: http.ts  index.ts
auto-pay-frontend/src/api/modules/: analytics.ts  dashboard.ts  payment.ts  (+3 more)
auto-pay-frontend/src/components/: ChartWrapper.vue  ErrorBoundary.vue
auto-pay-frontend/src/composables/: useApi.ts
auto-pay-frontend/src/config/: icons.ts
auto-pay-frontend/src/router/: index.ts
auto-pay-frontend/src/store/: analytics.ts  auth.ts  payment.ts
auto-pay-frontend/src/styles/: index.scss
auto-pay-frontend/src/types/: analytics.ts  index.ts
auto-pay-frontend/src/utils/: analytics.ts
auto-pay-sdks/: README.md
auto-pay-sdks/go-sdk/: README.md  go.mod  go.sum
auto-pay-sdks/go-sdk/autopay/: channel.go  channel_service.go  client.go  payment.go  payment_service.go  refund.go  refund_service.go  types.go
auto-pay-sdks/go-sdk/examples/: demo.go  go.mod  go.sum  main.go
auto-pay-sdks/java-sdk/: README.md  pom.xml
auto-pay-sdks/nodejs-sdk/: .eslintrc.js  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
auto-pay-sdks/nodejs-sdk/coverage/: index.html  lcov.info
auto-pay-sdks/nodejs-sdk/examples/: basic-usage.ts
auto-pay-sdks/nodejs-sdk/src/: AutoPay.ts  index.ts
auto-pay-sdks/nodejs-sdk/tests/: AutoPay.test.d.ts  AutoPay.test.d.ts.map  AutoPay.test.js  AutoPay.test.js.map  AutoPay.test.ts
auto-pay-sdks/python-sdk/: README.md  pyproject.toml
auto-pay-sdks/python-sdk/examples/: basic_usage.py  local_test.py  simple_example.py
auto-pay-sdks/python-sdk/src/autopay/: __init__.py  async_client.py  client.py  config.py  exceptions.py  models.py  service.py  utils.py
auto-pay-sdks/python-sdk/src/autopay/services/: account.py  channel.py  payment.py  refund.py  system.py  webhook.py
auto-pay-sdks/python-sdk/src/autopay_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+115 files in other folders)
